--- a/expressjs-start/package.json
+++ b/expressjs-start/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^2.1.18",
     "morgan": "~1.6.1",
     "nodemon": "^1.9.2",
+    "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
     "watson-developer-cloud": "^1.7.0"
   }
