--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "client-sessions": "^0.7.0",
+    "cookie-parser": "^1.3.5",
+    "cookie-session": "^2.0.0-alpha.1",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "express-dynamic-helpers-patch": "0.0.2",
     "jade": "~1.11.0",
     "jade-bootstrap": "^1.0.4",
     "mongodb": "^2.1.18",
